// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing PopupMenu Component renders as expected with required props 1`] = `
<View
  style={
    Object {
      "zIndex": 2,
    }
  }
>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "height": 1334,
            "position": "absolute",
            "width": 750,
            "zIndex": 1,
          },
          Object {
            "top": -0,
          },
        ]
      }
    />
  </TouchableWithoutFeedback>
  <withAnimatable(View)
    animation="zoomIn"
    delay={0}
    direction="normal"
    duration={100}
    iterationCount={1}
    iterationDelay={0}
    onAnimationBegin={[Function]}
    onAnimationEnd={[Function]}
    onLayout={[Function]}
    onTransitionBegin={[Function]}
    onTransitionEnd={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "lightgrey",
          "borderRadius": 10,
          "borderWidth": 1,
          "position": "absolute",
          "shadowColor": "#4E4A47",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 5,
          "zIndex": 2,
        },
        Object {
          "left": 10,
          "top": NaN,
        },
      ]
    }
    useNativeDriver={false}
  >
    <View />
  </withAnimatable(View)>
</View>
`;

exports[`Testing PopupMenu Component renders as expected with required props and parentHeight 1`] = `
<View
  style={
    Object {
      "zIndex": 2,
    }
  }
>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "height": 1334,
            "position": "absolute",
            "width": 750,
            "zIndex": 1,
          },
          Object {
            "top": -0,
          },
        ]
      }
    />
  </TouchableWithoutFeedback>
  <withAnimatable(View)
    animation="zoomIn"
    delay={0}
    direction="normal"
    duration={100}
    iterationCount={1}
    iterationDelay={0}
    onAnimationBegin={[Function]}
    onAnimationEnd={[Function]}
    onLayout={[Function]}
    onTransitionBegin={[Function]}
    onTransitionEnd={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "lightgrey",
          "borderRadius": 10,
          "borderWidth": 1,
          "position": "absolute",
          "shadowColor": "#4E4A47",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 5,
          "zIndex": 2,
        },
        Object {
          "left": 10,
          "top": 10,
        },
      ]
    }
    useNativeDriver={false}
  >
    <View />
  </withAnimatable(View)>
</View>
`;
